--- a/src/components/pages/Courses/Courses.css
+++ b/src/components/pages/Courses/Courses.css
@@ -15,7 +15,7 @@
 }
 
 .course_wrapper{
-    background: linear-gradient(90deg, rgba(103,101,240,1)27%,rgba(141,141,235,1)85%);
+    background: linear-gradient(90deg, rgb(42, 109, 235)27%,rgb(90, 184, 228)85%);
     border-radius: 0.5rem;
     display: flex;
     align-items: center;
