--- a/src/components/pages/Plans/Plans.css
+++ b/src/components/pages/Plans/Plans.css
@@ -17,11 +17,19 @@
 .pricing_wrapper{
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     column-gap: 2rem;
 }
 
 .pricing_item{
+    box-shadow: rgba(0,0,0,0.15) 0px 5px 15px 0px;
+    border-radius: 5px;
+    width: 33%;
+    background: #fff;
+    height: 440px;
+}
+
+.pricing_item:hover{
     transform: translateY(-10px);
     box-shadow: 0px 0px 20px rgba(0,0,0,0.2);
 }
@@ -31,3 +39,7 @@
     border-bottom: 1px solid #d3cef2;
     text-align: center;
 }
+
+.services li {
+    margin-bottom: 15px;
+}    
